// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action Creator: Api Keys listApiKeys() dispatches the correct action 1`] = `
Array [
  Object {
    "meta": Object {
      "headers": Object {},
      "method": "GET",
      "url": "/api-keys",
    },
    "type": "LIST_API_KEYS",
  },
]
`;

exports[`Action Creator: Api Keys listGrants() dispatches the correct action 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "url": "/authenticate/grants",
    },
    "type": "LIST_GRANTS",
  },
]
`;
